--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       </label>
     </nav>
     <side>
+      <div class="side_row">
+        <button id="zoom_in">+</button>
+        <button id="zoom_out">-</button>
+        <button id="zoom_reset">Reset</button>
+      </div>
       <span>Current brush:</span>
       <span name="current_brush_type">Single Tile</span>
       <button name="brush_single">Single Tile</button>
