--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
       </label>
     </nav>
     <side>
-      <button id="toggle_stats">Stats</button>
+      <button id="toggle_stats">Show details</button>
       <div class="side_row">
         <button id="zoom_in">+</button>
         <button id="zoom_out">-</button>
         <button id="zoom_reset">Reset</button>
       </div>
       <span>Current brush:</span>
+      <x-tile-element name="brush_preview"></x-tile-element >
       <span name="current_brush_type">Single Tile</span>
-      <button name="brush_single">Single Tile</button>
-      <button name="brush_fill">Fill Area</button>
+      <button class="brush selected" name="brush_none">No action</button >
+      <button class="brush" name="brush_single">Paint Single Tile</button >
+      <button class="brush" name="brush_fill">Fill Area</button >
       <x-palette></x-palette>
     </side>
     <main name="viewport">
       <x-renderer></x-renderer>
-    </main  >
+    </main>
   </body>
 </html>
