introduced layers (functioning, but no feedback on the layer)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       <span>Current brush:</span>
       <x-tile-element name="brush_preview"></x-tile-element >
       <span name="current_brush_type">Single Tile</span>
+      <span name="current_layer">Current layer</span>
+      <div class="side_row"> 
+        <button id="layer_up">+ Layer</button>
+        <button id="layer_down">- Layer</button>
+      </div>
       <button class="brush selected" name="brush_none">No action</button >
       <button class="brush" name="brush_single">Paint Single Tile</button >
       <button class="brush" name="brush_fill">Fill Area</button >
