--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
       <span>Current brush:</span>
       <x-tile-element name="brush_preview"></x-tile-element >
       <span name="current_brush_type">Single Tile</span>
-      <span name="current_layer">Current layer</span>
       <div class="side_row"> 
-        <button id="layer_up">+ Layer</button>
-        <button id="layer_down">- Layer</button>
+        <button id="layer_down">-</button>
+        <span name="current_layer">Current layer</span>
+        <button id="layer_up">+</button>
+        <button id="toggle_only_layer">Only</span>
       </div>
       <button class="brush selected" name="brush_none">No action</button >
       <button class="brush" name="brush_single">Paint Single Tile</button >
