--- a/index.html
+++ b/index.html
@@ -12,20 +12,8 @@
     <nav>
       <button id="save">Save Scenario</button>
       <button id="load">Load Scenario</button>
-      <button id="new_scenario">Clear Scenario</button>
-      <label>
-        Width
-        <input id="scenario_width" type="number" placeholder="Width" value="64"/>
-      </label>
-      <label>
-        Height
-        <input id="scenario_height" type="number" placeholder="Height" value="64"/>
-      </label>
+      <button id="new_scenario">New Scenario</button>
       <button id="load_palette">Load Palette</button>
-      <label>
-        Palette Tile Size
-        <input id="palette_tile_size" type="number" placeholder="Tile Size" value="32"/>
-      </label>
     </nav>
     <side>
       <button id="toggle_stats">Show details</button>
@@ -36,8 +24,7 @@
       </div>
       <span>Current brush:</span>
       <x-tile-element name="brush_preview"></x-tile-element >
-      <span name="current_brush_type">Single Tile</span>
-      <div class="side_row"> 
+      <div class="side_row">
         <button id="layer_down">-</button>
         <span name="current_layer">Current layer</span>
         <button id="layer_up">+</button>
