--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <button id="zoom_out">-</button>
         <button id="zoom_reset">Reset</button>
       </div>
+      <div>Current tool: <span id="current_tool">🚫 No tool</span></div>
+      <div>Current tile: <span id="current_tile"></span></div>
       <span>Current brush:</span>
       <x-tile-element name="brush_preview"></x-tile-element >
       <div class="side_row">
@@ -32,11 +34,6 @@
         <button id="layer_up">+</button>
         <button id="toggle_only_layer">Only</span>
       </div>
-      <button class="brush selected" name="brush_none">No action</button >
-      <button class="brush" name="brush_single">Paint Single Tile</button >
-      <button class="brush" name="brush_fill">Fill Area</button >
-      <button class="brush" name="remove_cell_properties">Remove properties</button>
-      <button class="brush" name="set_collision">Set Collision</button>
       <x-palette></x-palette>
     </side>
     <main name="viewport">
