--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <button id="toggle_only_layer">Only</span>
       </div>
       <x-palette></x-palette>
+      <layer-options></layer-options>
     </side>
     <main name="viewport">
       <x-renderer></x-renderer>
