--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button id="load">Load Scenario</button>
       <button id="new_scenario">New Scenario</button>
       <button id="load_palette">Load Palette</button>
+      <button id="generate_palette">Generate Palette</button>
       <button id="scenario_options">Options</button>
     </nav>
     <side>
