Add local storage save/load modals

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <nav>
       <button id="save">Save Scenario</button>
       <button id="load">Load Scenario</button>
+      <button id="save_local">Save to Local</button>
+      <button id="load_local">Load from Local</button>
       <button id="new_scenario">New Scenario</button>
       <button id="load_palette">Load Palette</button>
       <button id="generate_palette">Generate Palette</button>
@@ -36,5 +38,7 @@
       <x-renderer></x-renderer>
     </main>
     <scenario-options-modal></scenario-options-modal>
+    <save-scenario-modal></save-scenario-modal>
+    <load-scenario-modal></load-scenario-modal>
   </body>
 </html>
