--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button id="zoom_out">-</button>
         <button id="zoom_reset">Reset</button>
       </div>
+      <div id="tools_section" class="tools_section"></div>
       <div>Current tool: <span id="current_tool">🚫 No tool</span></div>
       <div>Current tile: <span id="current_tile"></span></div>
       <span>Current brush:</span>
