Add tile option presets

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <div>Current tile: <span id="current_tile"></span></div>
       <span>Current brush:</span>
       <x-tile-element name="brush_preview"></x-tile-element >
+      <tile-options></tile-options>
       <x-palette></x-palette>
     </side>
     <main name="viewport">
