Add grid toggle for canvas renderer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <layer-options></layer-options>
       <button id="toggle_stats">Show details</button>
       <button id="toggle_details">Show cell details</button>
+      <button id="toggle_grid">Show grid</button>
       <div class="side_row">
         <button id="zoom_in">+</button>
         <button id="zoom_out">-</button>
