Add TMX and CSV export/import

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <button id="load">Load Scenario</button>
       <button id="save_local">Save to Local</button>
       <button id="load_local">Load from Local</button>
+      <button id="export_tmx">Export TMX</button>
+      <button id="import_tmx">Import TMX</button>
+      <button id="export_csv">Export CSV</button>
+      <button id="import_csv">Import CSV</button>
       <button id="new_scenario">New Scenario</button>
       <button id="load_palette">Load Palette</button>
       <button id="generate_palette">Generate Palette</button>
