Add undo/redo history management

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <button id="new_scenario">New Scenario</button>
       <button id="load_palette">Load Palette</button>
       <button id="generate_palette">Generate Palette</button>
+      <button id="undo">Undo</button>
+      <button id="redo">Redo</button>
       <button id="scenario_options">Options</button>
     </nav>
     <side>
